Fix issue with flickering when dragging task over drop indicator

--- a/task-list.module.scss
+++ b/task-list.module.scss
@@ -203,6 +203,8 @@ $project-hue: shared.$project-hue;
   }
 
   .dropIndicator {
+    pointer-events: none;
+
     position: absolute;
     
     bottom: 0;
